<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name" />

</LinearLayout>
