<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="arch.wb.retail.categorieslist.CategoryViewModel" />

    </data>

    <ListView
        android:id="@+id/lv_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:categories="@{model.categories}"
        android:background="#aaaaaa" />

</layout>
